Fix letter spacing

--- a/css/landing.css
+++ b/css/landing.css
@@ -80,7 +80,7 @@ text-transform:none;
 font-family:"nimbus-sans", helvetica, arial, sans-serif;
 font-size:15px;
 margin-bottom:0px;
-letter-spacing: 4px;
+letter-spacing: 2px;
 text-transform: uppercase;
 }
 
